# notebooklm-mcp

./: .coverage  .env.example  .gitlab-ci.yml  .mcp.json  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  multi-tenant_tutorial.md  pyproject.toml
docs/: tutorial.md
src/: config.py  errors.py  tenant_manager.py  types.py
src/auth/: auth_manager.py
src/http_client/: __init__.py  client.py
src/mcp_server/: __init__.py  base_server.py  cli.py  multi_tenant_server.py  single_tenant_server.py
src/session/: browser_session.py  session_manager.py  shared_context_manager.py
src/tools/: __init__.py  definitions.py  handlers.py
src/utils/: cleanup_manager.py  cli_handler.py  logger.py  page_utils.py  settings_manager.py  stealth_utils.py
tests/: conftest.py  test_config.py  test_errors.py  test_http_client.py  test_notebook_library.py  test_research_handlers.py  test_settings_manager.py  test_source_handlers.py  test_tenant_manager.py  test_tool_handlers.py
