[project]
name = "notebooklm-mcp"
version = "0.1.0"
description = "MCP server for Google NotebookLM browser automation"
readme = "README.md"
authors = [
    {name = "Jing Wang", email = "jing.wang@accrete.ai"}
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "playwright>=1.48.0",
    "platformdirs>=4.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
notebooklm-mcp = "main:main_sync"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
