[project]
name = "notebooklm-mcp"
version = "0.1.0"
description = "MCP server for Google NotebookLM browser automation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "playwright>=1.48.0",
    "platformdirs>=4.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
]

[project.scripts]
notebooklm-mcp = "main:main_sync"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
